Add icons to website
WIP create class template.

[WIP] Add comment element to the scene.

Add shortcut to mode selected nodes and to hide toolbars.

Remove unused config files.

Add pycharm idea config folder.

Add more idea config files.

Add elements in serialization.

Remove unused functions.

Fix mypy and MANIFEST.in

Fix mypy and MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -39,6 +39,10 @@ recursive-include nodedge *
 recursive-exclude logs *
 recursive-exclude demos *
 
+
+recursive-exclude .idea *
+
+
 recursive-include docs *.gif
 recursive-include docs *.html
 recursive-include docs *.ico
@@ -47,3 +51,5 @@ recursive-include docs *.md
 recursive-include docs *.nojekyll
 recursive-include docs *.png
 recursive-include docs *.txt
+include SECURITY.md
+include docs/CNAME
