--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -51,3 +51,5 @@ recursive-include docs *.md
 recursive-include docs *.nojekyll
 recursive-include docs *.png
 recursive-include docs *.txt
+include SECURITY.md
+include docs/CNAME
