Fix mypy issues.

--- a/mypy.ini
+++ b/mypy.ini
@@ -26,6 +26,19 @@ ignore_missing_imports = True
 [mypy-numpy.*]
 ignore_missing_imports = True
 
+[mypy-pyqtgraph.*]
+ignore_missing_imports = True
+
+
+[mypy-h5py.*]
+ignore_missing_imports = True
+
+[mypy-asammdf.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
 ;
 ;disallow_untyped_calls = True
 ;disallow_untyped_defs = True
