--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -61,3 +61,6 @@ recursive-include resources *.psd
 recursive-include resources *.py
 recursive-include resources *.qss
 recursive-include resources *.yml
+
+recursive-exclude nodedge/resources/raw_black_icons *
+recursive-exclude nodedge/resources/raw_white_icons *
