Add codeql github action.

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -48,3 +48,9 @@ jobs:
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 #        PLATFORM: ${{ matrix.platform }}
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: python
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
