--- a/resources/palette/dark_palette.yml
+++ b/resources/palette/dark_palette.yml
@@ -3,7 +3,17 @@ mid: "#23252E"
 midLight: "#272C36"
 base: "#363A46"
 light: "#464B5B"
+visitedLink: "#6C748C"
+link: "#8791AF"
+extraLight: "#A2AED2"
+megaLight: "#BDCBF5"
+gigaLight: "#D4E2FF"
 text: "#FFFFFF"
 highlight: "#007BFF"
-link: "#8791AF"
-visitedLink: "#6C748C"
+canary: "#FBFF00"
+omelette: "#FCB813"
+crepe: "#FD9E09"
+orange: "#FF8500"
+darkBlue: "#14489E"
+turquoise: "#00A5FF"
+sky: "#8DDCFF"
