--- a/mypy.ini
+++ b/mypy.ini
@@ -39,6 +39,9 @@ ignore_missing_imports = True
 [mypy-pandas.*]
 ignore_missing_imports = True
 
+[mypy-scipy.*]
+ignore_missing_imports = True
+
 ;
 ;disallow_untyped_calls = True
 ;disallow_untyped_defs = True
