Try to fix github actions removing passenv.

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ description = Erase previous coverage.
 commands = coverage erase
 
 [testenv]
-passenv = DISPLAY XAUTHORITY
+;passenv = DISPLAY XAUTHORITY
 setenv =
     PYTHONPATH = {toxinidir}
     QT_API = pyside6
