Try to fix coverage check.

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ commands =
 ;ff: first failed
 ;n: parallel testing
 ;x: stop on first failure
-    pytest -s -vv --ff
+    pytest -s -vv --ff -nf
 deps =
     -rrequirements.txt
     -rrequirements_tests.txt
@@ -77,8 +77,10 @@ setenv =
   QT_API = pyside6
   PYTEST_QT_API = pyside6
   PYTHONPATH = {toxinidir}
+  QT_DEBUG_PLUGINS=1
 commands =
-    coverage run --append setup.py test
+;    pytest -s -vv --ff -nf --cov=qtmodern --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=100 --cov-append --cov-config=tox.ini {posargs}
+    coverage run -m pytest -x
     coverage report
     coverage html
     codecov -e CODECOV_TOKEN
