Try to fix coverage check.

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ commands =
 ;ff: first failed
 ;n: parallel testing
 ;x: stop on first failure
-    pytest -s -vv --ff -nf
+    pytest -s -vv --ff
 deps =
     -rrequirements.txt
     -rrequirements_tests.txt
