Add poetry support.

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,8 @@ log/
 
 resources/raw_black_icons
 resources/raw_white_icons
-
-data/
+resources/lucide
+tools/plotter
+tools/main_window_template
+data
+.idea
