Improve light palette

--- a/resources/palette/light_palette.yml
+++ b/resources/palette/light_palette.yml
@@ -1,12 +1,12 @@
-text: "#1B1D23"
-gigaLight: "#23252E"
-megaLight: "#272C36"
-extraLight: "#363A46"
-link: "#464B5B"
-visitedLink: "#6C748C"
-light: "#8791AF"
-base: "#A2AED2"
-midLight: "#BDCBF5"
-mid: "#D4E2FF"
-dark: "#FFFFFF"
-highlight: "#007BFF"
+text: "#000000"
+gigaLight: "#717181"
+megaLight: "#717181"
+extraLight: "#818191"
+link: "#9191A1"
+visitedLink: "#A1A1B1"
+light: "#B1B1C1"
+base: "#C1C1CD"
+midLight: "#DBDBE2"
+mid: "#F3F3F6"
+dark: "#E6E6E9"
+highlight: "#6DB2FC"
