Use same colors in dark and light palettes

--- a/resources/palette/light_palette.yml
+++ b/resources/palette/light_palette.yml
@@ -1,12 +1,12 @@
 text: "#000000"
-gigaLight: "#717181"
-megaLight: "#717181"
-extraLight: "#818191"
-link: "#9191A1"
-visitedLink: "#A1A1B1"
-light: "#B1B1C1"
-base: "#C1C1CD"
-midLight: "#DBDBE2"
-mid: "#F3F3F6"
-dark: "#E6E6E9"
+gigaLight: "#1B1D23"
+megaLight: "#23252E"
+extraLight: "#363A46"
+link: "#464B5B"
+visitedLink: "#6C748C"
+light: "#9FA7BF"
+base: "#C1C7D6"
+midLight: "#DFE2EA"
+mid: "#EEF1F4"
+dark: "#F4F6F8"
 highlight: "#6DB2FC"
