--- a/resources/palette/dark_palette.yml
+++ b/resources/palette/dark_palette.yml
@@ -4,9 +4,9 @@ midLight: "#272C36"
 base: "#363A46"
 light: "#464B5B"
 visitedLink: "#6C748C"
-link: "#8791AF"
-extraLight: "#A2AED2"
-megaLight: "#BDCBF5"
-gigaLight: "#D4E2FF"
+link: "#9FA7BF"
+extraLight: "#C1C7D6"
+megaLight: "#DFE2EA"
+gigaLight: "#EEF1F4"
 text: "#FFFFFF"
 highlight: "#007BFF"
