Remove poetry from project and use requirements txt files again.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -66,3 +66,5 @@ recursive-exclude nodedge/resources/raw_black_icons *
 recursive-exclude nodedge/resources/raw_white_icons *
 
 recursive-exclude data *
+
+recursive-include requirements *
