--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,8 @@ commands =
 ;x: stop on first failure
     pytest -s -vv --ff
 deps =
-    -rrequirements.txt
-    -rrequirements_tests.txt
+    -rrequirements/freeze/requirements.txt
+    -rrequirements/freeze/requirements_tests.txt
 
 [testenv:mypy]
 description = Check typing with mypy.
@@ -87,7 +87,7 @@ commands =
 
 [testenv:docs_sphinx]
 changedir = docs_sphinx
-deps = -rrequirements_docs.txt
+deps = -rrequirements/freeze/requirements_docs.txt
 commands =
     sphinx-build -b html -d {envtmpdir}/doctrees ./source {envtmpdir}/html
 
