Minimal python version 3.8. Add 3.11 to CI.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py38,py39,py310,black, packaging,coverage,mypy,docs_sphinx
+envlist = begin,py38,py39,py310,py311,black, packaging,coverage,mypy,docs_sphinx
 ;envlist = {py38,py39,py310}-{linux,macos,windows}, {begin,black, packaging,coverage,mypy,docs_sphinx}-{windows}
 
 [default]
@@ -97,6 +97,7 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310, mypy, flake8, black, coverage, packaging, docs_sphinx
+    3.11: py311
 
 ;[gh-actions:env]
 ;PLATFORM =
