Change dark colors

--- a/resources/palette/dark_palette.yml
+++ b/resources/palette/dark_palette.yml
@@ -1,7 +1,7 @@
-dark: "#1B1D23"
-mid: "#23252E"
-midLight: "#272C36"
-base: "#363A46"
+dark: "#363A46"
+mid: "#272C36"
+midLight: "#23252E"
+base: "#1B1D23"
 light: "#464B5B"
 visitedLink: "#6C748C"
 link: "#9FA7BF"
