Add requirements for packaging.

--- a/tox.ini
+++ b/tox.ini
@@ -56,10 +56,7 @@ ignore = demos
 description = Check for potential packaging problems.
 basepython = {[default]basepython}
 skip_install = True
-deps =
-   check-manifest==0.48
-   readme_renderer==37.2
-   twine==4.0.1
+deps = -rrequirements/freeze/requirements_packaging.txt
 
 commands =
    check-manifest -v
