--- a/logging.yaml
+++ b/logging.yaml
@@ -22,7 +22,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: INFO
         formatter: standard
-        filename: ../log/info.csv
+        filename: log/info.csv
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
@@ -31,7 +31,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: ERROR
         formatter: standard
-        filename: ../log/errors.csv
+        filename: log/errors.csv
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
@@ -40,7 +40,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: NOTSET
         formatter: standard
-        filename: ../log/debug.csv
+        filename: log/debug.csv
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
@@ -49,7 +49,7 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: CRITICAL
         formatter: standard
-        filename: ../log/critical.csv
+        filename: log/critical.csv
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
@@ -58,21 +58,57 @@ handlers:
         class: logging.handlers.RotatingFileHandler
         level: WARN
         formatter: standard
-        filename: ../log/warn.csv
+        filename: log/warn.csv
         maxBytes: 10485760 # 10MB
         backupCount: 20
         encoding: utf8
 
 root:
     level: DEBUG
-    handlers: [stdout, info_file_handler, error_file_handler,
-               critical_file_handler, debug_file_handler, warn_file_handler]
-    propagate: yes
+    handlers: [stdout, debug_file_handler]
+#    propagate: false
 
 loggers:
     nodedge.node:
+        handlers: [debug_file_handler]
+#        handlers: [stdout, info]
+
+    nodedge.logger:
+        handlers: [stdout, debug_file_handler]
         level: DEBUG
-        handlers: [stdout, stderr, debug_file_handler, info_file_handler,
-                   error_file_handler, critical_file_handler,
-                   debug_file_handler, warn_file_handler]
-        propagate: yes
+        propagate: false
+
+    nodedge.application_styler:
+        handlers: [debug_file_handler]
+        level: DEBUG
+        propagate: false
+
+    nodedge.edge:
+        handlers: [debug_file_handler]
+        level: DEBUG
+        propagate: false
+
+    nodedge.scene:
+        handlers: [debug_file_handler]
+        level: DEBUG
+        propagate: false
+
+    nodedge.scene_clipboard:
+        handlers: [debug_file_handler]
+        level: DEBUG
+        propagate: false
+
+    nodedge.utils:
+        handlers: [debug_file_handler]
+        level: DEBUG
+        propagate: false
+
+    nodedge.graphics_view:
+        handlers: [debug_file_handler]
+        level: DEBUG
+        propagate: false
+
+    nodedge.graphics_scene:
+        handlers: [debug_file_handler]
+        level: DEBUG
+        propagate: false
