--- a/mypy.ini
+++ b/mypy.ini
@@ -42,6 +42,9 @@ ignore_missing_imports = True
 [mypy-scipy.*]
 ignore_missing_imports = True
 
+[mypy-nptdms.*]
+ignore_missing_imports = True
+
 ;
 ;disallow_untyped_calls = True
 ;disallow_untyped_defs = True
