--- a/.github/workflows/python-deploy.yml
+++ b/.github/workflows/python-deploy.yml
@@ -2,12 +2,14 @@ name: Package Application with Pyinstaller
 
 on:
   push:
-    branches: [ main, feature/automate-deployement ]
+    branches:
+      - main
+      - feature/automate-deployment
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  # ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
