--- a/.github/workflows/python-deploy.yml
+++ b/.github/workflows/python-deploy.yml
@@ -12,12 +12,16 @@ jobs:
     runs-on: ubuntu-latest  # ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
     - name: Package Application
       uses: JackMcKew/pyinstaller-action-windows@main
       with:
         path: deploy
+        requirements: "../requirements/freeze/requirements_packaging.txt"
 
     - uses: actions/upload-artifact@v2
       with:
