--- a/requirements/freeze/requirements.txt
+++ b/requirements/freeze/requirements.txt
@@ -4,7 +4,7 @@ pyqtconsole==1.2.2
 PySide6==6.4.1
 PyYAML==6.0
 types-PyYAML==6.0.12.2
-pyqtgraph==0.13.1
+pyqtgraph>=0.12.0
 asammdf==7.2.0
 numpy==1.24.1
 pandas==1.5.2
