--- a/.github/workflows/python-deploy.yml
+++ b/.github/workflows/python-deploy.yml
@@ -13,12 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-#    - uses: actions/setup-python@v4
-#      with:
-#        python-version: '3.10'
 
     - name: Package Application
-      uses: JackMcKew/pyinstaller-action-windows@main
+      uses: qzconnor/pyinstaller-action-windows@main
       with:
         path: deploy
         requirements: "../requirements/freeze/requirements_packaging.txt"
@@ -26,4 +23,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: Nodedge
-        path: dist/windows
+        path: deploy/dist/windows
