--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -50,7 +50,8 @@ recursive-include docs *.md
 recursive-include docs *.nojekyll
 recursive-include docs *.png
 recursive-include docs *.txt
-resursive-include docs *.css
+recursive-include docs *.css
+
 include SECURITY.md
 include docs/CNAME
 
