Fix[gh]: Describe and rebase pr are now only on pull requests, not on branches.

--- a/.github/workflows/rebase-pr.yml
+++ b/.github/workflows/rebase-pr.yml
@@ -1,7 +1,9 @@
 name: Rebase Pull Requests
 on:
-  push:
-    branches: '**'
+  pull_request:
+    branches:
+      - main
+
 jobs:
   rebase:
     runs-on: ubuntu-latest
