--- a/resources/palette/dark_palette.yml
+++ b/resources/palette/dark_palette.yml
@@ -1,13 +1,27 @@
-dark: "#363A46"
-mid: "#272C36"
-midLight: "#23252E"
-base: "#1B1D23"
-light: "#464B5B"
-visitedLink: "#6C748C"
-link: "#9FA7BF"
-extraLight: "#C1C7D6"
-megaLight: "#DFE2EA"
-gigaLight: "#EEF1F4"
-text: "#FFFFFF"
+#dark: "#5b616e"
+#mid: "#454a55"
+#midLight: "#2f333c"
+#base: "#1b1d23"
+#light: "#727986"
+#visitedLink: "#89919d"
+#link: "#a2a9b3"
+#extraLight: "#bac1c9"
+#megaLight: "#d4d9df"
+#gigaLight: "#eef1f4"
+#text: "#ffffff"
+#highlight: "#007BFF"
+#brightText: "#005BFF"
+
+dark: "#484c55"
+mid: "#363a42"
+midLight: "#272a31"
+base: "#1b1d23"
+light: "#5d626a"
+visitedLink: "#757981"
+link: "#8f949a"
+extraLight: "#acb0b6"
+megaLight: "#cbcfd3"
+gigaLight: "#eef1f4"
+text: "#ffffff"
 highlight: "#007BFF"
 brightText: "#005BFF"
