--- a/resources/palette/light_palette.yml
+++ b/resources/palette/light_palette.yml
@@ -1,13 +1,27 @@
-text: "#000000"
-gigaLight: "#1B1D23"
-megaLight: "#23252E"
-extraLight: "#363A46"
-link: "#464B5B"
-visitedLink: "#6C748C"
-light: "#9FA7BF"
-base: "#C1C7D6"
-midLight: "#DFE2EA"
-mid: "#EEF1F4"
-dark: "#F4F6F8"
+#text: "#000000"
+#gigaLight: "#1B1D23"
+#megaLight: "#23252E"
+#extraLight: "#363A46"
+#link: "#464B5B"
+#visitedLink: "#6C748C"
+#light: "#9FA7BF"
+#base: "#C1C7D6"
+#midLight: "#DFE2EA"
+#mid: "#EEF1F4"
+#dark: "#F4F6F8"
+#highlight: "#6DB2FC"
+#brightText: "#009CFF"
+
+dark: "#d3d7db"
+mid: "#dcdfe3"
+midLight: "#e5e8eb"
+base: "#eef1f4"
+light: "#cbcfd3"
+visitedLink: "#c2c7cb"
+link: "#babfc4"
+extraLight: "#b2b7bc"
+megaLight: "#abafb5"
+gigaLight: "#a3a8ae"
+text: "#1b1c22"
 highlight: "#6DB2FC"
 brightText: "#009CFF"
