--- a/resources/palette/light_palette.yml
+++ b/resources/palette/light_palette.yml
@@ -12,16 +12,16 @@
 #highlight: "#6DB2FC"
 #brightText: "#009CFF"
 
-dark: "#d3d7db"
-mid: "#dcdfe3"
-midLight: "#e5e8eb"
+dark: "#d2d6da"
+mid: "#dbdfe3"
+midLight: "#e4e8eb"
 base: "#eef1f4"
-light: "#cbcfd3"
-visitedLink: "#c2c7cb"
-link: "#babfc4"
-extraLight: "#b2b7bc"
-megaLight: "#abafb5"
-gigaLight: "#a3a8ae"
+light: "#c9cdd2"
+visitedLink: "#c0c4c9"
+link: "#b6bbc1"
+extraLight: "#9196a0"
+megaLight: "#6d727d"
+gigaLight: "#4b4f5a"
 text: "#1b1c22"
 highlight: "#6DB2FC"
 brightText: "#009CFF"
