--- a/resources/palette/dark_palette.yml
+++ b/resources/palette/dark_palette.yml
@@ -1,7 +1,7 @@
-dark: "#484c55"
-mid: "#363a42"
-midLight: "#272a31"
-base: "#1b1d23"
+dark: "#1b1d23"
+mid: "#272a31"
+base: "#363a42"
+midLight: "#484c55"
 light: "#5d626a"
 visitedLink: "#757981"
 link: "#8f949a"
@@ -10,4 +10,4 @@ megaLight: "#cbcfd3"
 gigaLight: "#eef1f4"
 text: "#ffffff"
 highlight: "#007BFF"
-brightText: "#005BFF"
+brightText: "#005CBF"
