Update node operation codes.

--- a/tools/block_generator/numpy_block_config.json
+++ b/tools/block_generator/numpy_block_config.json
@@ -88,7 +88,7 @@
         "library_title":"logics",
         "function":"less_equal",
         "block_name":"NumpyLessEqual",
-        "op_block_string":"OP_NODE_LESS_NUMPY_EQUAL",
+        "op_block_string":"OP_NODE_NUMPY_LESS_EQUAL",
         "operation_title":"Less or equal",
         "operation_symbol":"<=",
         "icon_filename":"less_or_equal_100",
@@ -364,7 +364,7 @@
         "library_title":"advanced_maths",
         "function":"arcsin",
         "block_name":"NumpyArcsin",
-        "op_block_string":"OP_NODE_ARCSIN",
+        "op_block_string":"OP_NODE_NUMPY_ARCSIN",
         "operation_title":"Arcsine",
         "operation_symbol":"",
         "icon_filename":"arcsin_100",
