--- a/logging.yaml
+++ b/logging.yaml
@@ -115,6 +115,6 @@ loggers:
 
 
     nodedge.dats.signals_table_widget:
-        handlers: [stdout, debug_file_handler]
+        handlers: [debug_file_handler]
         level: DEBUG
         propagate: false
