--- a/logging.yaml
+++ b/logging.yaml
@@ -123,3 +123,8 @@ loggers:
         handlers: [stdout, debug_file_handler]
         level: DEBUG
         propagate: false
+
+    nodedge.scene_items_tree_widget:
+        handlers: [stdout, debug_file_handler]
+        level: DEBUG
+        propagate: false
