--- a/logging.yaml
+++ b/logging.yaml
@@ -120,16 +120,21 @@ loggers:
         propagate: false
 
     nodedge.scene_item_detail_widget:
-        handlers: [stdout, debug_file_handler]
+        handlers: [debug_file_handler]
         level: DEBUG
         propagate: false
 
     nodedge.editor_window:
-        handlers: [stdout, debug_file_handler]
+        handlers: [debug_file_handler]
         level: DEBUG
         propagate: false
 
     nodedge.scene_items_tree_widget:
+        handlers: [debug_file_handler]
+        level: DEBUG
+        propagate: false
+
+    nodedge.blocks.block:
         handlers: [stdout, debug_file_handler]
         level: DEBUG
         propagate: false
