--- a/logging.yaml
+++ b/logging.yaml
@@ -133,3 +133,8 @@ loggers:
         handlers: [stdout, debug_file_handler]
         level: DEBUG
         propagate: false
+
+    nodedge.dats.worksheets_tab_widget:
+        handlers: [ stdout, debug_file_handler ]
+        level: DEBUG
+        propagate: false
