Change about box and light theme

--- a/resources/palette/light_palette.yml
+++ b/resources/palette/light_palette.yml
@@ -12,16 +12,16 @@
 #highlight: "#6DB2FC"
 #brightText: "#009CFF"
 
-dark: "#d2d6da"
-mid: "#dbdfe3"
-midLight: "#e4e8eb"
+dark: "#bac0c8"
+mid: "#cbd0d7"
+midLight: "#dce0e5"
 base: "#eef1f4"
-light: "#c9cdd2"
-visitedLink: "#c0c4c9"
-link: "#b6bbc1"
-extraLight: "#9196a0"
-megaLight: "#6d727d"
-gigaLight: "#4b4f5a"
+light: "#a9b0b9"
+visitedLink: "#999faa"
+link: "#898f9a"
+extraLight: "#797f8a"
+megaLight: "#696e7a"
+gigaLight: "#5a5e6a"
 text: "#1b1c22"
-highlight: "#6DB2FC"
-brightText: "#009CFF"
+highlight: "#90C8F7"
+brightText: "#6DB2FC"
