--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,38 @@ repos:
         stages: [commit]
       - id: requirements-txt-fixer
         stages: [commit]
+      - id: detect-private-key
+        stages: [commit]
+      - id: detect-aws-credentials
+        stages: [commit]
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.3.1
+    hooks:
+      - id: pyupgrade
+        stages: [commit]
+        args: [--py310-plus]
+  - repo: https://github.com/mgedmin/check-manifest
+    rev: "0.49"
+    hooks:
+      - id: check-manifest
+  - repo: https://github.com/jackdewinter/pymarkdown
+    rev: v0.9.9
+    hooks:
+      - id: pymarkdown
+        pass_filenames: false
+        args:
+          - --config
+          - pymarkdown_config.json
+          - scan
+          - .
+          - ./docs
+          - ./docs_sphinx
+  - repo: https://github.com/Lucas-C/pre-commit-hooks-markup
+    rev: v1.0.1
+    hooks:
+      - id: rst-linter
+
+
 #  - repo: local
 #    hooks:
 #      - id: tests
