Fix restore config where all curves where add to the first workbook/worksheet pair.

--- a/logging.yaml
+++ b/logging.yaml
@@ -143,3 +143,8 @@ loggers:
         handlers: [ stdout, debug_file_handler ]
         level: DEBUG
         propagate: false
+
+    nodedge.dats.dats_window:
+        handlers: [ stdout, debug_file_handler ]
+        level: DEBUG
+        propagate: false
