Run tests each time a pull request is modified.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches:
       - main
-    types: [opened, synchronize]
+    types: [ opened, synchronize, reopened, edited ]
 
 jobs:
   test:
