--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
 #        platform: [ubuntu-latest, macos-latest, windows-latest]
         platform: [ubuntu-latest]
-        python-version: [3.8, 3.9, '3.10', '3.11']
+        python-version: [ 3.9, '3.10', '3.11', '3.12' ]
 
     steps:
     - uses: actions/checkout@v3
