Export env variable to calm down xvfb in gh action.

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ setenv =
     QT_API = pyside6
     PYTEST_QT_API = pyside6
     QT_DEBUG_PLUGINS=1
+    QT_QPA_PLATFORM=offscreen
 commands =
 ;nf: new file first
 ;s: show capture
