Update version number and simplify packaging process
Removed 'pyqtconsole' dependency from requirements.txt.
Updated download link and version number in coverpage.md and file_version_info.txt to 0.5.1.
Simplified the deploy.py and .spec files by removing unnecessary parameters and renaming the application to 'NodedgeSetup'.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,3 +4,15 @@ commit = True
 tag = True
 
 [bumpversion:file:setup.py]
+
+[bumpversion:file:docs/_coverpage.md]
+;search = Nodedge <small>{current_version}</small>
+;replace = Nodedge <small>{new_version}</small>
+
+[bumpversion:file:file_version_info.txt]
+;search = 'FileVersion', '{current_version}'
+;replace = 'FileVersion', '{new_version}'
+
+;[bumpversion:file:docs/_coverpage.md]
+;search = https://github.com/nodedge/nodedge/releases/download/v{current_version}/NodedgeSetup.exe
+;replace = https://github.com/nodedge/nodedge/releases/download/v{new_version}/NodedgeSetup.exe
