Refactor and enhance various Python scripts and configurations
This commit refactors the `build_docs.py` and `build_executable.py` scripts, moving large chunks of code into separate functions for better readability and maintainability. The `.github/workflows/publish.yml` has been enhanced to include actions for building an executable and uploading an artifact, thereby improving the automation pipeline. Configurations for `dats` and `nodedge`, as well as minor tweaks in `curve_dialog.py`, have been updated for better script running setup.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,3 +37,15 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Build executable
+      run: |
+        python build_executable.py
+    - uses: actions/upload-artifact@v3
+      with:
+        name: NodedgeSetup.exe
+        path: dist/NodedgeSetup.exe
+    - uses: Shopify/upload-to-release@v1
+      with:
+        name: NodedgeSetup.exe
+        path: dist/NodedgeSetup.exe
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
