--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,38 +10,27 @@ include mypy.ini
 include .bumpversion.cfg
 include CODE_OF_CONDUCT.md
 include logging.yaml
-
+include build.py
+include nodedge.spec
+include pymarkdown_config.json
 include .flake8
 include .isort.cfg
 include .pre-commit-config.yaml
-include requirements_dev.txt
-include requirements_docs.txt
-include requirements_tests.txt
 include tox.ini
 include pytest.ini
 include .coveragerc
+include *.txt
+include SECURITY.md
+include docs/CNAME
 
 recursive-include nodedge/qss *
 recursive-include tests *
 recursive-include examples *
 recursive-include tools *
-recursive-exclude * __pycache__
-recursive-exclude * *.py[co]
 
 recursive-include docs_sphinx *.rst *.py Makefile make.bat *.png
 recursive-include docs_sphinx/source/_templates *
 recursive-exclude docs_sphinx/build *
-
-include *.txt
-recursive-include nodedge *
-
-recursive-exclude logs *
-recursive-exclude demos *
-
-
-recursive-exclude .idea *
-
-
 recursive-include docs *.gif
 recursive-include docs *.html
 recursive-include docs *.ico
@@ -52,9 +41,6 @@ recursive-include docs *.png
 recursive-include docs *.txt
 recursive-include docs *.css
 
-include SECURITY.md
-include docs/CNAME
-
 recursive-include resources *.ico
 recursive-include resources *.png
 recursive-include resources *.psd
@@ -63,19 +49,17 @@ recursive-include resources *.qss
 recursive-include resources *.yml
 recursive-include resources *.svg
 
-recursive-exclude nodedge/resources/raw_black_icons *
-recursive-exclude nodedge/resources/raw_white_icons *
-
-recursive-exclude data *
-
+recursive-include nodedge *
 recursive-include requirements *
-
 recursive-include docs_sphinx *.md
 recursive-include deploy *
 
-include deploy.py
-include nodedge.spec
-
+recursive-exclude logs *
+recursive-exclude demos *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
+recursive-exclude .idea *
+recursive-exclude nodedge/resources/raw_black_icons *
+recursive-exclude nodedge/resources/raw_white_icons *
+recursive-exclude data *
 recursive-exclude docs/build *
-
-include pymarkdown_config.json
