--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,36 +1,30 @@
+include *.txt
+include .bumpversion.cfg
+include .coveragerc
+include .flake8
+include .isort.cfg
+include .pre-commit-config.yaml
 include AUTHORS.rst
+include CODE_OF_CONDUCT.md
 include CONTRIBUTING.rst
 include HISTORY.md
 include LICENSE
 include README.md
-include requirements.txt
-include setup.py
-include readthedocs.yml
-include mypy.ini
-include .bumpversion.cfg
-include CODE_OF_CONDUCT.md
-include logging.yaml
+include SECURITY.md
 include build.py
+include docs/CNAME
+include logging.yaml
+include mypy.ini
 include nodedge.spec
 include pymarkdown_config.json
-include .flake8
-include .isort.cfg
-include .pre-commit-config.yaml
-include tox.ini
 include pytest.ini
-include .coveragerc
-include *.txt
-include SECURITY.md
-include docs/CNAME
+include readthedocs.yml
+include requirements.txt
+include setup.py
+include tox.ini
 
-recursive-include nodedge/qss *
-recursive-include tests *
-recursive-include examples *
-recursive-include tools *
-
-recursive-include docs_sphinx *.rst *.py Makefile make.bat *.png
-recursive-include docs_sphinx/source/_templates *
-recursive-exclude docs_sphinx/build *
+recursive-include deploy *
+recursive-include docs *.css
 recursive-include docs *.gif
 recursive-include docs *.html
 recursive-include docs *.ico
@@ -39,27 +33,31 @@ recursive-include docs *.md
 recursive-include docs *.nojekyll
 recursive-include docs *.png
 recursive-include docs *.txt
-recursive-include docs *.css
-
+recursive-include docs_sphinx *.md
+recursive-include docs_sphinx *.rst *.py Makefile make.bat *.png
+recursive-include docs_sphinx/source/_templates *
+recursive-include examples *
+recursive-include nodedge *
+recursive-include nodedge/qss *
+recursive-include requirements *
 recursive-include resources *.ico
 recursive-include resources *.png
 recursive-include resources *.psd
 recursive-include resources *.py
 recursive-include resources *.qss
-recursive-include resources *.yml
 recursive-include resources *.svg
+recursive-include resources *.yml
+recursive-include tests *
+recursive-include tools *
 
-recursive-include nodedge *
-recursive-include requirements *
-recursive-include docs_sphinx *.md
-recursive-include deploy *
-
-recursive-exclude logs *
-recursive-exclude demos *
-recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
+recursive-exclude * __pycache__
+recursive-exclude * *.spec
 recursive-exclude .idea *
+recursive-exclude data *
+recursive-exclude demos *
+recursive-exclude docs/build *
+recursive-exclude docs_sphinx/build *
+recursive-exclude logs *
 recursive-exclude nodedge/resources/raw_black_icons *
 recursive-exclude nodedge/resources/raw_white_icons *
-recursive-exclude data *
-recursive-exclude docs/build *
