Fix tox configuration for 3.11 with coverage.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py39,py310,py311,py312,black, packaging,coverage,mypy,docs_sphinx
+envlist = begin,py39,py310,py311_cov,py312,black, packaging,coverage,mypy,docs_sphinx
 ;envlist = {py38,py39,py310}-{linux,macos,windows}, {begin,black, packaging,coverage,mypy,docs_sphinx}-{windows}
 
 [default]
@@ -64,7 +64,7 @@ commands =
    pip wheel --wheel-dir "{envtmpdir}/dist" --no-deps {toxinidir}
    twine check "{envtmpdir}/dist/"*
 
-[testenv:test_with_coverage]
+[testenv:py311_cov]
 description = Compute coverage from tests run by setup and send it to codecov.
 basepython = {[default]basepython}
 passenv = TOXENV,CI,CODECOV_*
@@ -94,7 +94,7 @@ commands =
 python =
     3.9: py39
     3.10: py310
-    3.11: test_with_coverage, mypy, flake8, black, packaging, docs_sphinx
+    3.11: py311_cov, mypy, flake8, black, packaging, docs_sphinx
     3.12: py312
 
 ;[gh-actions:env]
