--- a/pytest.ini
+++ b/pytest.ini
@@ -7,3 +7,6 @@ filterwarnings =
 log_cli = true
 log_cli_format = %(asctime)s|%(created)f|%(levelname).4s|%(filename)-15.15s|%(lineno)-3.3s|%(funcName)-10.10s|%(process)d|%(thread)d|%(message)s
 log_cli_date_format = %Y-%m-%d %H:%M:%S
+markers =
+    slow: marks tests as slow
+    serial: marks tests as being executed consecutively
