--- a/logging.yaml
+++ b/logging.yaml
@@ -148,3 +148,8 @@ loggers:
         handlers: [ stdout, debug_file_handler ]
         level: DEBUG
         propagate: false
+
+    nodedge.dats.curve_dialog:
+        handlers: [ stdout, debug_file_handler ]
+        level: DEBUG
+        propagate: false
