Split github actions to improve readability.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py39,py310,py311_cov,py312,black, packaging,coverage,mypy,docs_sphinx
+envlist = begin,py39,py310,py311_cov,py312,black,packaging,coverage,mypy,docs_sphinx
 ;envlist = {py38,py39,py310}-{linux,macos,windows}, {begin,black, packaging,coverage,mypy,docs_sphinx}-{windows}
 
 [default]
@@ -94,8 +94,13 @@ commands =
 python =
     3.9: py39
     3.10: py310
-    3.11: py311_cov, mypy, flake8, black, packaging, docs_sphinx
+    3.11: py311_cov
     3.12: py312
+    mypy: mypy
+    flake8: flake8
+    black: black
+    packaging: packaging
+    docs_sphinx: docs_sphinx
 
 ;[gh-actions:env]
 ;PLATFORM =
