--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,8 @@ jobs:
       matrix:
 #        platform: [ubuntu-latest, macos-latest, windows-latest]
         platform: [ubuntu-latest]
-        python-version: [ 3.9, '3.10', '3.11', '3.12' ]
+        python-version: [ 3.9, '3.10', '3.11', '3.12', 'mypy', 'flake8',
+                          'black', 'docs_sphinx', 'packaging' ]
 
     steps:
     - uses: actions/checkout@v3
@@ -26,16 +27,22 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
-    - name: Install linux dependencies
-      run: |
-        if [ "${{ matrix.platform }}" == "ubuntu-latest" ]; then
-          sudo apt-get update
-          sudo apt-get install -y libxml2-utils x11-utils xvfb herbstluftwm
-          sudo apt-get install -y libxkbcommon-x11-0 libxcb-icccm4 libegl1
-          sudo apt-get install -y libxcb-image0 libxcb-keysyms1 libxcb-randr0 x11-utils
-          sudo apt-get install -y libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
-        fi
-      shell: bash
+    - uses: awalsh128/cache-apt-pkgs-action@v1.3.1
+      with:
+        packages: libxml2-utils x11-utils xvfb herbstluftwm libxkbcommon-x11-0
+          libxcb-icccm4 libegl1 libxcb-image0 libxcb-keysyms1 libxcb-randr0
+          x11-utils libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
+        version: 1.0
+      #    - name: Install linux dependencies
+      #      run: |
+      #        if [ "${{ matrix.platform }}" == "ubuntu-latest" ]; then
+      #          sudo apt-get update
+      #          sudo apt-get install -y libxml2-utils x11-utils xvfb herbstluftwm
+      #          sudo apt-get install -y libxkbcommon-x11-0 libxcb-icccm4 libegl1
+      #          sudo apt-get install -y libxcb-image0 libxcb-keysyms1 libxcb-randr0 x11-utils
+      #          sudo apt-get install -y libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
+      #        fi
+      #      shell: bash
     - name: Install python dependencies
       run: |
         python -m pip install --upgrade pip
