--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ description = Erase previous coverage.
 commands = coverage erase
 
 [testenv]
+skip_install = true
 ;passenv = DISPLAY XAUTHORITY
 setenv =
     PYTHONPATH = {toxinidir}
@@ -85,6 +86,7 @@ commands =
     codecov -e CODECOV_TOKEN
 
 [testenv:docs_sphinx]
+skip_install = true
 changedir = docs_sphinx
 deps = -rrequirements/freeze/requirements_docs.txt
 commands =
